completed Sneaker service and tests